// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing the Layout of LandingPageWrapper ->  matches snapshot when user is logged in 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col justify-center items-center"
    data-testid="outer-container-download-result"
  >
    <div
      data-testid="Test-Icon"
    >
      Icon
    </div>
    <div
      class="mt-5"
      data-testid="title-container-download-result"
    >
      <p
        class="font-bold"
        data-testid="title-download-result"
      >
        Test Title
      </p>
    </div>
    <div
      class="my-3 px-8 text-center"
      data-testid="subtitle-container-download-result"
    >
      <p
        data-testid="subtitle-download-result"
      >
        Test SubTitle
      </p>
    </div>
    <div
      class=""
    >
      <div
        class="bg-gradient-to-r text-center cursor-pointer from-iw-primary to-iw-secondary p-0.5 rounded-lg"
      >
        <div
          class="py-1 px-2 bg-white justify-center center rounded-lg hover:bg-none hover:bg-[#FFF2F2] hover:text-[#E64E4E] undefined"
        >
          <button
            class="text-iw-tertiary font-bold text-[16px] leading-[24px] "
            data-testid="btn-home-download-result"
            id="btn-home-download-result"
          >
            <span
              class="inline-block bg-gradient-to-r from-iw-primary to-iw-secondary bg-clip-text text-md font-bold text-transparent"
            >
              Go To Home
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Testing the Layout of LandingPageWrapper ->  matches snapshot when user is not logged in 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col justify-center items-center pt-32"
    data-testid="outer-container-download-result"
  >
    <div
      data-testid="Test-Icon"
    >
      Icon
    </div>
    <div
      class="my-4"
      data-testid="title-container-download-result"
    >
      <p
        class="font-bold"
        data-testid="title-download-result"
      >
        Test Title
      </p>
    </div>
    <div
      class="mb-6 px-10 text-center"
      data-testid="subtitle-container-download-result"
    >
      <p
        data-testid="subtitle-download-result"
      >
        Test SubTitle
      </p>
    </div>
    <div
      class=""
    >
      <div
        class="bg-gradient-to-r text-center cursor-pointer from-iw-primary to-iw-secondary p-0.5 rounded-lg"
      >
        <div
          class="py-1 px-2 bg-white justify-center center rounded-lg hover:bg-none hover:bg-[#FFF2F2] hover:text-[#E64E4E] undefined"
        >
          <button
            class="text-iw-tertiary font-bold text-[16px] leading-[24px] "
            data-testid="btn-home-download-result"
            id="btn-home-download-result"
          >
            <span
              class="inline-block bg-gradient-to-r from-iw-primary to-iw-secondary bg-clip-text text-md font-bold text-transparent"
            >
              Go To Home
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
